<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:background="@color/background"
    android:overScrollMode="never"	
>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
	> 
	
	    <View
	        android:id="@+id/about_line_top"
	    	android:layout_width="match_parent"
	    	android:layout_height="1dp"
	    	android:background="@color/actionBar_tabBar_lighter_line"
	    	android:layout_alignParentTop="true"   
		/>
	    
	    <View 
	        android:id="@+id/about_line_bottom"
	    	android:layout_width="match_parent"
	    	android:layout_height="1dp"
	    	android:layout_below="@id/about_line_top"
	    	android:background="@color/actionBar_tabBar_darker_line"    
		/>
	    
	    <ImageView
	        android:id="@+id/about_image"
	        android:contentDescription="@string/image_description"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:scaleType="center"
	        android:layout_below="@id/about_line_bottom"
	        android:src="@drawable/bg_top"
		/>    
	
	    <TextView
	        android:id="@+id/about_invoiceXpress" 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="30dp"
	    	android:layout_marginLeft="23dp"
	    	android:layout_marginRight="23dp"
	    	android:layout_below="@id/about_image"
	    	android:text="@string/about_invoiceXpress"
	    	android:textSize="16sp"
	    	android:textColor="@color/details_text"
		/>
	    
	    <TextView
	        android:id="@+id/about_version" 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginLeft="23dp"
	    	android:layout_marginRight="23dp"    	
	    	android:layout_below="@id/about_invoiceXpress"
			android:text="@string/about_version"
			android:textSize="11sp"	    	
		/> 
		
	    <TextView
	        android:id="@+id/about_link" 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="20dp"
	    	android:layout_marginLeft="23dp"
	    	android:layout_marginRight="23dp"
	    	android:layout_below="@id/about_version"
			android:text="@string/about_link"
			android:textSize="16sp"
			android:textColor="@color/details_text"	    	
		/> 
		
	   	<TextView
	        android:id="@+id/about_rights" 
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="8dp"
	    	android:layout_marginLeft="23dp"
	    	android:layout_marginRight="23dp"    	
	    	android:layout_below="@id/about_link"
	    	android:text="@string/about_support"
	    	android:textSize="10sp"
	    	android:textColor="@color/details_text_3"
		/>
	   	
	   	<Button
	        android:id="@+id/about_support"
			android:layout_width="match_parent"
			android:layout_height="90dp"
			android:layout_marginTop="48dp"
	    	android:layout_marginLeft="23dp"
	    	android:layout_marginRight="23dp"
	    	android:layout_below="@id/about_rights"		
			android:background="@color/button_background"
			android:text="@string/about_button"
			android:textColor="@color/green_normal"
	    /> 
	    
		<View 
		    android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_marginTop="12dp"
			android:layout_below="@id/about_support"	
		/>
		
	</RelativeLayout>
	
	
</ScrollView>